# STM32G031_Docker

./: .mxproject  CMakeLists.txt  LICENSE  Makefile  STM32G031.ioc
.devcontainer/: Dockerfile  devcontainer.json
Core/: core.cmake
Core/Inc/: main.h
Core/Src/: gpio.c  main.c  usart.c
Drivers/: drivers.cmake
cmake/: complierflags.cmake  defines.cmake  sources.cmake  toolchain.cmake
